compiladores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    A
    BATCH
    EQ
    ESTADO
    FILTRO
    NE
    NEWLINE
    PERIODO
    PISO
    TIPO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> reservar
Rule 2     programa -> consultar
Rule 3     programa -> cancelar
Rule 4     programa -> disponibilidade
Rule 5     reservar -> RESERVAR recurso STRING DATA DATE HORA_INICIO TIME HORA_FIM TIME
Rule 6     consultar -> CONSULTAR RESERVAS
Rule 7     consultar -> CONSULTAR RESERVAS ATIVAS
Rule 8     consultar -> CONSULTAR RESERVAS CANCELADAS
Rule 9     recurso -> SALA
Rule 10    recurso -> LABORATORIO
Rule 11    recurso -> EQUIPAMENTO
Rule 12    cancelar -> CANCELAR RESERVA recurso NUMBER
Rule 13    disponibilidade -> DISPONIBILIDADE recurso DATA DATE HORA_INICIO TIME HORA_FIM TIME

Terminals, with rules where they appear

A                    : 
ATIVAS               : 7
BATCH                : 
CANCELADAS           : 8
CANCELAR             : 12
CONSULTAR            : 6 7 8
DATA                 : 5 13
DATE                 : 5 13
DISPONIBILIDADE      : 13
EQ                   : 
EQUIPAMENTO          : 11
ESTADO               : 
FILTRO               : 
HORA_FIM             : 5 13
HORA_INICIO          : 5 13
LABORATORIO          : 10
NE                   : 
NEWLINE              : 
NUMBER               : 12
PERIODO              : 
PISO                 : 
RESERVA              : 12
RESERVAR             : 5
RESERVAS             : 6 7 8
SALA                 : 9
STRING               : 5
TIME                 : 5 5 13 13
TIPO                 : 
error                : 

Nonterminals, with rules where they appear

cancelar             : 3
consultar            : 2
disponibilidade      : 4
programa             : 0
recurso              : 5 12 13
reservar             : 1

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . reservar
    (2) programa -> . consultar
    (3) programa -> . cancelar
    (4) programa -> . disponibilidade
    (5) reservar -> . RESERVAR recurso STRING DATA DATE HORA_INICIO TIME HORA_FIM TIME
    (6) consultar -> . CONSULTAR RESERVAS
    (7) consultar -> . CONSULTAR RESERVAS ATIVAS
    (8) consultar -> . CONSULTAR RESERVAS CANCELADAS
    (12) cancelar -> . CANCELAR RESERVA recurso NUMBER
    (13) disponibilidade -> . DISPONIBILIDADE recurso DATA DATE HORA_INICIO TIME HORA_FIM TIME

    RESERVAR        shift and go to state 6
    CONSULTAR       shift and go to state 7
    CANCELAR        shift and go to state 8
    DISPONIBILIDADE shift and go to state 9

    programa                       shift and go to state 1
    reservar                       shift and go to state 2
    consultar                      shift and go to state 3
    cancelar                       shift and go to state 4
    disponibilidade                shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> reservar .

    $end            reduce using rule 1 (programa -> reservar .)


state 3

    (2) programa -> consultar .

    $end            reduce using rule 2 (programa -> consultar .)


state 4

    (3) programa -> cancelar .

    $end            reduce using rule 3 (programa -> cancelar .)


state 5

    (4) programa -> disponibilidade .

    $end            reduce using rule 4 (programa -> disponibilidade .)


state 6

    (5) reservar -> RESERVAR . recurso STRING DATA DATE HORA_INICIO TIME HORA_FIM TIME
    (9) recurso -> . SALA
    (10) recurso -> . LABORATORIO
    (11) recurso -> . EQUIPAMENTO

    SALA            shift and go to state 11
    LABORATORIO     shift and go to state 12
    EQUIPAMENTO     shift and go to state 13

    recurso                        shift and go to state 10

state 7

    (6) consultar -> CONSULTAR . RESERVAS
    (7) consultar -> CONSULTAR . RESERVAS ATIVAS
    (8) consultar -> CONSULTAR . RESERVAS CANCELADAS

    RESERVAS        shift and go to state 14


state 8

    (12) cancelar -> CANCELAR . RESERVA recurso NUMBER

    RESERVA         shift and go to state 15


state 9

    (13) disponibilidade -> DISPONIBILIDADE . recurso DATA DATE HORA_INICIO TIME HORA_FIM TIME
    (9) recurso -> . SALA
    (10) recurso -> . LABORATORIO
    (11) recurso -> . EQUIPAMENTO

    SALA            shift and go to state 11
    LABORATORIO     shift and go to state 12
    EQUIPAMENTO     shift and go to state 13

    recurso                        shift and go to state 16

state 10

    (5) reservar -> RESERVAR recurso . STRING DATA DATE HORA_INICIO TIME HORA_FIM TIME

    STRING          shift and go to state 17


state 11

    (9) recurso -> SALA .

    STRING          reduce using rule 9 (recurso -> SALA .)
    DATA            reduce using rule 9 (recurso -> SALA .)
    NUMBER          reduce using rule 9 (recurso -> SALA .)


state 12

    (10) recurso -> LABORATORIO .

    STRING          reduce using rule 10 (recurso -> LABORATORIO .)
    DATA            reduce using rule 10 (recurso -> LABORATORIO .)
    NUMBER          reduce using rule 10 (recurso -> LABORATORIO .)


state 13

    (11) recurso -> EQUIPAMENTO .

    STRING          reduce using rule 11 (recurso -> EQUIPAMENTO .)
    DATA            reduce using rule 11 (recurso -> EQUIPAMENTO .)
    NUMBER          reduce using rule 11 (recurso -> EQUIPAMENTO .)


state 14

    (6) consultar -> CONSULTAR RESERVAS .
    (7) consultar -> CONSULTAR RESERVAS . ATIVAS
    (8) consultar -> CONSULTAR RESERVAS . CANCELADAS

    $end            reduce using rule 6 (consultar -> CONSULTAR RESERVAS .)
    ATIVAS          shift and go to state 18
    CANCELADAS      shift and go to state 19


state 15

    (12) cancelar -> CANCELAR RESERVA . recurso NUMBER
    (9) recurso -> . SALA
    (10) recurso -> . LABORATORIO
    (11) recurso -> . EQUIPAMENTO

    SALA            shift and go to state 11
    LABORATORIO     shift and go to state 12
    EQUIPAMENTO     shift and go to state 13

    recurso                        shift and go to state 20

state 16

    (13) disponibilidade -> DISPONIBILIDADE recurso . DATA DATE HORA_INICIO TIME HORA_FIM TIME

    DATA            shift and go to state 21


state 17

    (5) reservar -> RESERVAR recurso STRING . DATA DATE HORA_INICIO TIME HORA_FIM TIME

    DATA            shift and go to state 22


state 18

    (7) consultar -> CONSULTAR RESERVAS ATIVAS .

    $end            reduce using rule 7 (consultar -> CONSULTAR RESERVAS ATIVAS .)


state 19

    (8) consultar -> CONSULTAR RESERVAS CANCELADAS .

    $end            reduce using rule 8 (consultar -> CONSULTAR RESERVAS CANCELADAS .)


state 20

    (12) cancelar -> CANCELAR RESERVA recurso . NUMBER

    NUMBER          shift and go to state 23


state 21

    (13) disponibilidade -> DISPONIBILIDADE recurso DATA . DATE HORA_INICIO TIME HORA_FIM TIME

    DATE            shift and go to state 24


state 22

    (5) reservar -> RESERVAR recurso STRING DATA . DATE HORA_INICIO TIME HORA_FIM TIME

    DATE            shift and go to state 25


state 23

    (12) cancelar -> CANCELAR RESERVA recurso NUMBER .

    $end            reduce using rule 12 (cancelar -> CANCELAR RESERVA recurso NUMBER .)


state 24

    (13) disponibilidade -> DISPONIBILIDADE recurso DATA DATE . HORA_INICIO TIME HORA_FIM TIME

    HORA_INICIO     shift and go to state 26


state 25

    (5) reservar -> RESERVAR recurso STRING DATA DATE . HORA_INICIO TIME HORA_FIM TIME

    HORA_INICIO     shift and go to state 27


state 26

    (13) disponibilidade -> DISPONIBILIDADE recurso DATA DATE HORA_INICIO . TIME HORA_FIM TIME

    TIME            shift and go to state 28


state 27

    (5) reservar -> RESERVAR recurso STRING DATA DATE HORA_INICIO . TIME HORA_FIM TIME

    TIME            shift and go to state 29


state 28

    (13) disponibilidade -> DISPONIBILIDADE recurso DATA DATE HORA_INICIO TIME . HORA_FIM TIME

    HORA_FIM        shift and go to state 30


state 29

    (5) reservar -> RESERVAR recurso STRING DATA DATE HORA_INICIO TIME . HORA_FIM TIME

    HORA_FIM        shift and go to state 31


state 30

    (13) disponibilidade -> DISPONIBILIDADE recurso DATA DATE HORA_INICIO TIME HORA_FIM . TIME

    TIME            shift and go to state 32


state 31

    (5) reservar -> RESERVAR recurso STRING DATA DATE HORA_INICIO TIME HORA_FIM . TIME

    TIME            shift and go to state 33


state 32

    (13) disponibilidade -> DISPONIBILIDADE recurso DATA DATE HORA_INICIO TIME HORA_FIM TIME .

    $end            reduce using rule 13 (disponibilidade -> DISPONIBILIDADE recurso DATA DATE HORA_INICIO TIME HORA_FIM TIME .)


state 33

    (5) reservar -> RESERVAR recurso STRING DATA DATE HORA_INICIO TIME HORA_FIM TIME .

    $end            reduce using rule 5 (reservar -> RESERVAR recurso STRING DATA DATE HORA_INICIO TIME HORA_FIM TIME .)

